Implemented JWT-based authentication and secured API endpoints. Added car retrieval functionality for dashboard view. Updated API documentation.